# m17-tools

./: .gitignore  CMakeLists.txt  README.md  filter-taps.ipynb  packzip.bat  win_build.bat
.github/workflows/: ci.yml
apps/: CMakeLists.txt  m17-demod.cpp  m17-demod.h  m17-gateway-link_demod.cpp  m17-gateway-link_mod.cpp  m17-mod-gui.cpp  m17-mod.cpp  m17-rtx-gui.cpp
cmake/: m17cxxConfig.cmake.in
example/: CMakeLists.txt  example.cpp
include/m17cxx/: Convolution.h  Correlator.h  FreqDevEstimator.h  Fsk4Demod.h  Golay24.h  LinkSetupFrame.h  M17BitDemodulator.h  M17Demodulator.h  M17FrameDecoder.h  M17Modulator.h  M17Randomizer.h  M17Synchronizer.h  SlidingDFT.h  SymbolEvm.h  Trellis.h  Util.h  ax25_frame.h
scripts/: ESG-upload.py
src/: AudioWrapper.cpp  CMakeLists.txt  serialib.cpp
src/imgui/: CMakeLists.txt
src/imgui/libs/glfw/: CMakeLists.txt
src/tiny-AES-c/: CMakeLists.txt
tests/: CMakeLists.txt  CRC16Test.cpp  ClockRecoveryTest.cpp  ConvolutionTest.cpp  CorrelatorTest.cpp  DataCarrierDetectTest.cpp  FreqDevEstimatorTest.cpp  Golay24Test.cpp  LinkSetupFrameTest.cpp  M17FramerTest.cpp  M17ModulatorTest.cpp  M17RandomizerTest.cpp  PolynomialInterleaverTest.cpp  SlidingDFTTest.cpp  TrellisTest.cpp  UtilTest.cpp  ViterbiTest.cpp
